k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexgen-hired-service
spec:
  selector:
    app: nexgen-hired
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
