k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexgen-hired-ingress
spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexgen-hired-service
            port:
              number: 80
